--- a/views/update.ejs
+++ b/views/update.ejs
@@ -18,7 +18,7 @@
         <div id="container">
             <form action="/update" method="post" enctype="multipart/form-data">
                 <div id="img-div">
-                    <img src="<%=epost.img%>" alt="">
+                    <img src="<%=user.image%>" alt="">
                 </div>
                 <br>
                 <label for="newpic">New Picture</label>
