--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
                         <label for="image">Profile:</label>
                         <input type="file" name="image" required >
                     </div>
-                    <input type="password" name="password" required placeholder="Password">
+                    <input type="password" name="password" maxlength="64" required placeholder="Password">
                     <input type="number" name="age" required placeholder="Age">
                     <input type="submit" value="Sign Up">
                     <div id="flex">
