--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
                     <input type="email" name="email" required maxlength="320" placeholder="Email">
                     <div id="flex" style="display: flex;">
                         <label for="image">Profile:</label>
-                        <input type="file" name="image" required >
+                        <input type="file" name="image" required accept=".jpg, .jpeg, .png, .pdf" >
                     </div>
                     <input type="password" name="password" maxlength="64" required placeholder="Password">
                     <input type="number" name="age" required placeholder="Age">
