--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,6 +23,7 @@
                         <label for="image">Profile:</label>
                         <input type="file" name="image" required accept=".jpg, .jpeg, .png, .pdf" >
                     </div>
+                    <p style="color:red";><strong>Only .jpeg,.jpg,.png files are allowed</strong></p>
                     <input type="password" name="password" maxlength="64" required placeholder="Password">
                     <input type="number" name="age" required placeholder="Age">
                     <input type="submit" value="Sign Up">
