--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,9 +21,9 @@
                     <input type="email" name="email" required maxlength="320" placeholder="Email">
                     <div id="flex" style="display: flex;">
                         <label for="image">Profile:</label>
-                        <input type="file" name="image" required accept=".jpg, .jpeg, .png, .pdf" >
+                        <input type="file" name="image" required accept=".jpg, .jpeg, .png" >
                     </div>
-                    <p style="color:red";><strong>Only .jpeg,.jpg,.png files are allowed</strong></p>
+                    <p style="color:red";>Only <strong>.jpeg,.jpg,.png</strong> files are allowed</p>
                     <input type="password" name="password" maxlength="64" required placeholder="Password">
                     <input type="number" name="age" required placeholder="Age">
                     <input type="submit" value="Sign Up">
